[package]
authors = [
    "Kartik Sharma <kartik.sharma522@gmail.com>",
    "Ajeet D'Souza <98ajeet@gmail.com>",
]
description = "Extract partitions from Android OTA files"
categories = ["command-line-utilities", "android"]
edition = "2021"
keywords = ["android", "cli", "terminal"]
license = "MIT"
name = "otadump"
repository = "https://github.com/topminipie/otadump"
readme = "README.md"
rust-version = "1.70.0"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bzip2 = { version = "0.4", features = ["static"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-print = "0.3"
console = { version = "0.15", features = ["windows-console-colors"] }
hex = "0.4"
indicatif = "0.17"
memmap2 = "0.9"
nom = "7.1"
nom-derive = "0.10"
prost = "0.12"
rayon = "1.10"
rust-lzma = { version = "0.6", features = ["static"] }
sha2 = "0.10"
sync-unsafe-cell = "0.1"
tempfile = "3.10"
zip = { version = "2.0", features = [
    "deflate",
    "bzip2",
    "zstd",
], default-features = false }

[build-dependencies]
prost-build = "0.12"

[profile.release]
codegen-units = 1
lto = true
strip = true
